Bug 167124 - Timeline view not updated when changing selected time range
Summary: Timeline view not updated when changing selected time range
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Searches-TimeLine (other bugs)
Version First Reported In: 0.10.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-21 10:33 UTC by Gandalf Lechner
Modified: 2012-06-27 11:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gandalf Lechner 2008-07-21 10:33:32 UTC
Version:           0.10.0-beta2 (rev.: 835081) (using 4.00.98 (KDE 4.0.98 (4.1 RC1)), Kubuntu packages)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.24-17-generic

When changing the time range selection in the timeline view, the thumbnails to the right are not updated according to this new selection. Only after switching to a different view (album, tag, fuzzy search ... ) and back to the timeline view, one can see the pictures belonging to the new selection.
Comment 1 Marcel Wiesweg 2008-07-26 21:48:49 UTC
SVN commit 838123 by mwiesweg:

Always set current album to 0 first, if we later select the same

album as before (with a changed query though) the album
would not be reloaded

BUG: 167124


 M  +2 -3      timelineview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=838123
Comment 2 Gandalf Lechner 2008-07-27 22:06:03 UTC
Thanks for fixing this, Marcel