Always set current album to 0 first, if we later select the same

album as before (with a changed query though) the album
would not be reloaded

BUG: 167124

svn path=/trunk/extragear/graphics/digikam/; revision=838123